<resources>
    <string name="app_name">Zeta FinTech</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="financeteen_lit">FinanceTeen LIT</string>
    <string name="Goals">Goals</string>
    <string name="Earn_Coins">Earn Coins!</string>

    <string-array name="array_name">
        <item>Daily</item>
        <item>Weekly</item>
        <item>Monthly</item>
    </string-array>

    <string name="spinner_title">Target Frequency</string>
    <string name="menu_item_edit">Edit</string>
    <string name="menu_item_remove">Remove</string>
    <string name="payments_txt">Payments</string>
    <string name="title_activity_dashboard">DashboardActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="continue_with_where_you_left_off">Continue with where you left off</string>
    <string name="level_1">Level 1</string>
    <string name="share">Share</string>

</resources>