<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.zeta.zetafintech.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_dashboard"
        android:name="com.zeta.zetafintech.ui.dashboard.DashboardFragment"
        android:label="@string/title_dashboard"
        tools:layout="@layout/fragment_dashboard" />

    <fragment
        android:id="@+id/navigation_notifications"
        android:name="com.zeta.zetafintech.ui.notifications.NotificationsFragment"
        android:label="@string/title_notifications"
        tools:layout="@layout/fragment_notifications" />
    <fragment
        android:id="@+id/earnFragment"
        android:name="com.zeta.zetafintech.fragments.EarnFragment"
        android:label="EarnFragment" >
        <action
            android:id="@+id/action_earnFragment_to_homeFragment"
            app:destination="@id/homeFragment" />
    </fragment>
    <fragment
        android:id="@+id/homeFragment"
        android:name="com.zeta.zetafintech.fragments.HomeFragment"
        android:label="HomeFragment" >
        <action
            android:id="@+id/action_homeFragment_to_earnFragment"
            app:destination="@id/earnFragment" />
        <action
            android:id="@+id/action_homeFragment_to_makePaymentFragment"
            app:destination="@id/makePaymentFragment" />
        <action
            android:id="@+id/action_homeFragment_to_receivePaymentFragment"
            app:destination="@id/receivePaymentFragment" />
        <action
            android:id="@+id/action_homeFragment_to_paymentFragment"
            app:destination="@id/paymentFragment" />
        <action
            android:id="@+id/action_homeFragment_to_redeemFragment"
            app:destination="@id/redeemFragment" />
        <action
            android:id="@+id/action_homeFragment_to_profileFragment"
            app:destination="@id/profileFragment" />
        <action
            android:id="@+id/action_homeFragment_to_accountFragment"
            app:destination="@id/accountFragment" />
    </fragment>
    <fragment
        android:id="@+id/makePaymentFragment"
        android:name="com.zeta.zetafintech.fragments.MakePaymentFragment"
        android:label="MakePaymentFragment" >
        <action
            android:id="@+id/action_makePaymentFragment_to_paymentFragment"
            app:destination="@id/paymentFragment" />
    </fragment>
    <fragment
        android:id="@+id/receivePaymentFragment"
        android:name="com.zeta.zetafintech.fragments.ReceivePaymentFragment"
        android:label="ReceivePaymentFragment" >
        <action
            android:id="@+id/action_receivePaymentFragment_to_paymentFragment"
            app:destination="@id/paymentFragment" />
    </fragment>
    <fragment
        android:id="@+id/paymentFragment"
        android:name="com.zeta.zetafintech.fragments.PaymentFragment"
        android:label="PaymentFragment" >
        <action
            android:id="@+id/action_paymentFragment_to_makePaymentFragment"
            app:destination="@id/makePaymentFragment" />
        <action
            android:id="@+id/action_paymentFragment_to_receivePaymentFragment"
            app:destination="@id/receivePaymentFragment" />
        <action
            android:id="@+id/action_paymentFragment_to_homeFragment"
            app:destination="@id/homeFragment" />
    </fragment>
    <fragment
        android:id="@+id/redeemFragment"
        android:name="com.zeta.zetafintech.fragments.RedeemFragment"
        android:label="RedeemFragment" >
        <action
            android:id="@+id/action_redeemFragment_to_homeFragment"
            app:destination="@id/homeFragment" />
        <action
            android:id="@+id/action_redeemFragment_to_productFragment"
            app:destination="@id/productFragment" />
    </fragment>
    <fragment
        android:id="@+id/productFragment"
        android:name="com.zeta.zetafintech.fragments.ProductFragment"
        android:label="fragment_product"
        tools:layout="@layout/fragment_product" >
        <action
            android:id="@+id/action_productFragment_to_redeemFragment"
            app:destination="@id/redeemFragment" />
    </fragment>
    <fragment
        android:id="@+id/profileFragment"
        android:name="com.zeta.zetafintech.fragments.ProfileFragment"
        android:label="ProfileFragment" >
        <action
            android:id="@+id/action_profileFragment_to_homeFragment"
            app:destination="@id/homeFragment" />
    </fragment>
    <fragment
        android:id="@+id/accountFragment"
        android:name="com.zeta.zetafintech.AccountFragment"
        android:label="fragment_account"
        tools:layout="@layout/fragment_account" >
        <action
            android:id="@+id/action_accountFragment_to_homeFragment"
            app:destination="@id/homeFragment" />
        <action
            android:id="@+id/action_accountFragment_to_transactionHistoryFragment"
            app:destination="@id/transactionHistoryFragment" />
    </fragment>
    <fragment
        android:id="@+id/transactionHistoryFragment"
        android:name="com.zeta.zetafintech.TransactionHistoryFragment"
        android:label="fragment_transaction_history"
        tools:layout="@layout/fragment_transaction_history" >
        <action
            android:id="@+id/action_transactionHistoryFragment_to_transactionClickFragment"
            app:destination="@id/transactionClickFragment" />
        <action
            android:id="@+id/action_transactionHistoryFragment_to_accountFragment"
            app:destination="@id/accountFragment" />
    </fragment>
    <fragment
        android:id="@+id/transactionClickFragment"
        android:name="com.zeta.zetafintech.TransactionClickFragment"
        android:label="fragment_transaction_click"
        tools:layout="@layout/fragment_transaction_click" />
</navigation>