<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:fillViewport="true">

    <androidx.constraintlayout.widget.ConstraintLayout xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/light_bg"
        tools:context=".fragments.HomeFragment">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/top"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:id="@+id/welcome"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                android:layout_marginTop="15dp"
                android:fontFamily="sans-serif-medium"
                android:text="Welcome back"
                android:textColor="@color/dark_text"
                android:textFontWeight="200"
                android:textSize="25sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="0dp"
                android:fontFamily="sans-serif-medium"
                android:text="Miss Jajodia"
                android:textColor="@color/dark_text"
                android:textFontWeight="450"
                android:textSize="25sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/welcome" />


            <soup.neumorphism.NeumorphImageButton
                android:id="@+id/notif_button"
                style="@style/Widget.Neumorph.ImageButton"
                android:layout_width="70dp"
                android:layout_height="70dp"
                android:scaleType="centerInside"
                android:src="@drawable/ic_notification"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <View
            android:id="@+id/line"
            android:layout_width="0dp"
            android:layout_height="2dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="6.5dp"
            android:layout_marginEnd="20dp"
            android:background="@color/dark_text"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/top" />

        <TextView
            android:id="@+id/bal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:layout_marginTop="57dp"
            android:text="Currrent Balance : "
            android:textColor="@color/dark_text"
            android:textSize="21sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/line" />

        <TextView
            android:id="@+id/money"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:fontFamily="sans-serif-medium"
            android:text=" ₹ 1111.05"
            android:textColor="@color/dark_text"
            android:textFontWeight="500"
            android:textSize="28sp"
            app:layout_constraintStart_toEndOf="@id/bal"
            app:layout_constraintTop_toBottomOf="@id/line" />

        <TextView
            android:id="@+id/continueText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:layout_marginTop="45dp"
            android:fontFamily="sans-serif-medium"
            android:text="@string/continue_with_where_you_left_off"
            android:textFontWeight="400"
            android:textSize="17sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/money" />

        <TextView
            android:id="@+id/levelText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:fontFamily="sans-serif-medium"
            android:text="@string/level_1"
            android:textColor="@color/dark_text"
            android:textFontWeight="400"
            android:textSize="17sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/continueText" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/level"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/levelText">

            <soup.neumorphism.NeumorphCardView
                android:layout_width="360dp"
                android:layout_height="60dp"
                android:layout_gravity="center"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <soup.neumorphism.NeumorphCardView
                    android:id="@+id/card_left"
                    style="@style/Widget.Neumorph.CardView"
                    android:layout_width="330dp"
                    android:layout_height="40dp"
                    android:layout_marginBottom="40dp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:neumorph_shapeType="pressed">

                    <View
                        android:layout_width="100dp"
                        android:layout_height="40dp"
                        android:background="@color/dark_text"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />
                </soup.neumorphism.NeumorphCardView>

            </soup.neumorphism.NeumorphCardView>
        </androidx.constraintlayout.widget.ConstraintLayout>

        <TextView
            android:id="@+id/mission"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:layout_marginTop="30dp"
            android:fontFamily="sans-serif-medium"
            android:paddingTop="10dp"
            android:paddingBottom="20dp"
            android:text="Prerna's Mission"
            android:textColor="@color/dark_text"
            android:textSize="24sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/level" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/missionlist"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/mission">

            <soup.neumorphism.NeumorphCardView
                android:id="@+id/checkbox"
                android:layout_width="70dp"
                android:layout_height="70dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:neumorph_shapeType="pressed" />

            <TextView
                android:id="@+id/task"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="76dp"
                android:layout_marginTop="20dp"
                android:fontFamily="sans-serif-medium"
                android:text="Workout"
                android:textColor="@color/dark_text"
                android:textFontWeight="300"
                android:textSize="20sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="20dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_weight="1"
            app:layout_constraintTop_toBottomOf="@id/mission">

            <soup.neumorphism.NeumorphCardView
                android:id="@+id/checkbox2"
                android:layout_width="70dp"
                android:layout_height="70dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:neumorph_shapeType="pressed" />

            <TextView
                android:id="@+id/task2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="76dp"
                android:layout_marginTop="20dp"
                android:fontFamily="sans-serif-medium"
                android:text="Homework"
                android:textColor="@color/dark_text"
                android:textFontWeight="300"
                android:textSize="20sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <TextView
            android:id="@+id/goal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:layout_marginTop="30dp"
            android:fontFamily="sans-serif-medium"
            android:paddingStart="15dp"
            android:paddingTop="20dp"
            android:paddingBottom="20dp"
            android:text="Prerna's Goals"
            android:textColor="@color/dark_text"
            android:textSize="24sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/missionlist" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/goal_list"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:orientation="horizontal"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/goal"
            tools:listitem="@layout/activity_goals_card" />

        <TextView
            android:id="@+id/earn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:layout_marginTop="30dp"
            android:fontFamily="sans-serif-medium"
            android:paddingStart="15dp"
            android:paddingTop="30dp"
            android:paddingBottom="20dp"
            android:text="Earn Coins"
            android:textColor="@color/dark_text"
            android:textSize="24sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/goal_list" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/earn_list"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:orientation="horizontal"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/earn"
            tools:listitem="@layout/activity_goals_card" />

        <TextView
            android:id="@+id/invite"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:layout_marginTop="30dp"
            android:fontFamily="sans-serif-medium"
            android:paddingStart="15dp"
            android:paddingTop="20dp"
            android:paddingBottom="20dp"
            android:text="Invite and Earn"
            android:textColor="@color/dark_text"
            android:textSize="24sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/earn_list" />

        <soup.neumorphism.NeumorphButton
            android:id="@+id/button_one"
            style="@style/Widget.Neumorph.Button"
            android:layout_width="150dp"
            android:layout_height="90dp"
            android:layout_gravity="center"
            android:layout_marginStart="15dp"
            android:layout_marginBottom="30dp"
            android:text="@string/share"
            android:textColor="@color/dark_text"
            android:textSize="16sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/invite" />


        <TextView
            android:id="@+id/code"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="150dp"
            android:layout_marginTop="30dp"
            android:fontFamily="sans-serif-medium"
            android:paddingLeft="20dp"
            android:text="PT123567"
            android:textColor="@color/dark_text"
            android:textSize="20sp"
            app:layout_constraintStart_toEndOf="@id/button_one"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/invite" />

        <soup.neumorphism.NeumorphCardView
            android:id="@+id/kyccard"
            style="@style/Widget.Neumorph.CardView"
            android:layout_width="330dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="80dp"
            android:padding="20dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/code"
            app:neumorph_shapeType="pressed">

            <soup.neumorphism.NeumorphCardView
                android:id="@+id/usericon"
                style="@style/Widget.Neumorph.CardView"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:layout_marginBottom="40dp"
                android:padding="10dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:neumorph_shapeType="pressed" />

            <TextView
                android:id="@+id/kyctext"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="115dp"
                android:layout_marginTop="20dp"
                android:fontFamily="sans-serif-medium"
                android:text="---KYC---"
                android:textColor="@color/dark_text" />

            <soup.neumorphism.NeumorphCardView
                android:id="@+id/tickicon"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:layout_marginLeft="200dp"
                android:padding="10dp" />

            <soup.neumorphism.NeumorphCardView
                android:id="@+id/textcard"
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:layout_marginTop="100dp"
                android:padding="30dp">

                <TextView
                    android:id="@+id/text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="sans-serif-medium"
                    android:text="Help your friend complete their KYC to earn bonus coins"
                    android:textAlignment="center"
                    android:textColor="@color/dark_text"
                    android:textFontWeight="300" />

            </soup.neumorphism.NeumorphCardView>

        </soup.neumorphism.NeumorphCardView>

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>